axion-database-schema/manifasts/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql

spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:17.10
          ports:
            - containerPort: 5432
