axion-database-schema/manifasts/postgreSql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresqlservice
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - port: 80
    targetPort: 5432
