axion-database-schema/manifasts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.aknsp.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadminservice
            port: 
              number: 80
